deleted spec.ts to improve aplication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<!-- <div *ngFor="let product of products">
-  <p>{{product.nombre}}</p>
-</div> -->
-<!-- <div *ngFor="let subcategory of subcategories">
-  <p>{{subcategory.nombre}}</p>
-</div> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
