--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+
 <app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div style="min-height: 81vh; z-index: 1; position: relative;">
+    <router-outlet></router-outlet>
+</div>
+<div style="z-index: 2; position: relative">
+    <app-footer></app-footer>
+</div>
+
