--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-
 <app-header></app-header>
-<div style="min-height: 81vh; z-index: 1; position: relative;">
+
+<div class="container">
     <router-outlet></router-outlet>
 </div>
-<div style="z-index: 2; position: relative">
-    <app-footer></app-footer>
-</div>
 
+<app-footer></app-footer>
