--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex">
-    <app-sidebar (subcategory)="getSubcategoryId($event)"></app-sidebar>
-    <app-products-list [subcategory]="subcategory"></app-products-list>
+
+<div>
+    <app-products-list></app-products-list>
 </div>
