--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -1,10 +1,10 @@
-<footer class="p-3" style="background-color: #212529;">
+<footer class="p-3">
     <div class="container">
-        <ul class="d-flex align-items-center justify-content-between" style="color: #fff; list-style: none;font-size: 16px;">
+        <ul class="d-flex align-items-center justify-content-between w-100">
             <li><a href="https://www.instagram.com/kielkeyvich/"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
-            <li><a href="https://www.linkedin.com/in/ezequielmakarevich/"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/ezequielmakarevich/"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
             <li><a href="https://twitter.com/Keyvich1"><i class="fa-brands fa-twitter"></i> Twitter</a></li>
         </ul>
-        <p style="color:#fff; text-align: center;font-size: 16px;">Desarrollado por Ezequiel Makarevich</p>
+        <p>Desarrollado por Ezequiel Makarevich</p>
     </div>
 </footer>
