--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3 sticked">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Compra Gamer</a>
+        <a class="navbar-brand" href="#"><img alt="Logo de Compra Gamer" src="../../../assets/img/logo-fix.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
                     <a class="nav-link mx-2" href="#">Registrate</a>
                 </li>
                 <li class="nav-item">   
-                    <a class="nav-link mx-2 shopping_cart"><mat-icon [matBadge]="productsQuantity" matBadgeColor="warn">shopping_cart</mat-icon></a>
+                    <a class="nav-link mx-2 shopping_cart"><mat-icon [matBadge]="productsQuantity" [matBadgeColor]="'warn'">shopping_cart</mat-icon></a>
                 </li>
             </ul>
         </div>
