--- a/src/app/ui/header/header.component.scss
+++ b/src/app/ui/header/header.component.scss
@@ -1,3 +1,15 @@
+img {
+    max-width: 180px;
+}
 .shopping_cart {
+    @media (min-width: 768px) {
+        display: block;
+    }
+    display: none;
     cursor: pointer;
+}
+.sticked {
+    width: 100%;
+    position: fixed;
+    z-index: 9999;
 }
