--- a/src/app/ui/products-list/products-list.component.html
+++ b/src/app/ui/products-list/products-list.component.html
@@ -1,34 +1,76 @@
-<div class="mt-5">
-    <button mat-raised-button class="d-flex align-items-center justify-content-center" (click)="resetSearch()"
-        *ngIf="this.subcategory !== null">{{categoriesList[subcategory!]}} <mat-icon>cancel</mat-icon></button>
-</div>
-<div class="container my-3">
-    <div class="row" style="gap: 10px;">
-        <mat-card class="d-flex gap-2 align-items-center"
-            style="padding: 0; max-width: 800px; background-color: #fff;" *ngFor="let product of filteredList">
-            <div>
-                <img mat-card-image style="width: 150px; height: 150px; margin: 0; border-radius: 4px;" class="p-4"
-                    src="https://compragamer.net/pga/imagenes_publicadas/compragamer_Imganen_general_{{product.imagenes[0].nombre}}-med.jpg">
+<mat-drawer-container class="custom-container" [hasBackdrop]="false" autosize>
+    <div class="container-fluid d-flex justify-content-center align-items-center jumbotron px-0">
+        <div class="container">
+            <div class="jumbotron-mobile ">
+
+                <h1 *ngIf="this.subcategory !== null">
+                    {{categoriesList[subcategory!]}}</h1>
+                <h1 *ngIf="this.subcategory === null">Lista de productos</h1>
+                <button mat-button (click)="drawer.toggle()"> Filtrar por subcategoría
+                    <mat-icon>filter_list</mat-icon>
+                </button>
             </div>
-            <div class="d-flex flex-column w-100 p-3">
-                <mat-card-title style="color: #212529;">{{product.nombre}}</mat-card-title>
-
-
-
-                <p style="font-size: 20px; color: #212529;">
-                    {{product.precio | currency:'ARS'}}
-                </p>
-
-                <mat-chip-list>
-                    <mat-chip style="font-size: 12px;">
-                        {{categoriesList[product.id_subcategoria]}}
-                    </mat-chip>
-                </mat-chip-list>
-                <div>
-                    <button mat-raised-button color="warn" class="mt-2" (click)="addToCart()">Agregar al
-                    carrito</button>
-                </div>
-            </div>
-        </mat-card>
+        </div>
     </div>
-</div>
+
+
+    <div class="container">
+
+        <div class="custom-sidenav-content justify-content-end mt-4">
+            <mat-chip-list>
+                <mat-chip *ngIf="this.subcategory !== null" (removed)="resetFilter()">
+                    {{categoriesList[subcategory!]}}
+                    <button matChipRemove>
+                        <mat-icon>cancel</mat-icon>
+                    </button>
+                </mat-chip>
+            </mat-chip-list>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <mat-card class="d-flex align-items-center p-0 custom-card"
+                    *ngFor="let product of filteredList">
+                    <div>
+                        <img mat-card-image class="p-5"
+                            src="https://compragamer.net/pga/imagenes_publicadas/compragamer_Imganen_general_{{product.imagenes[0].nombre}}-med.jpg">
+                    </div>
+                    <div class="d-flex flex-column p-3">
+                        <mat-card-title class="custom-card-title">{{product.nombre}}</mat-card-title>
+
+                        <div class="d-flex align-items-center mb-2">
+                            <p class="price">
+                                {{product.precio | currency:'ARS':'symbol-narrow'}}
+                            </p>
+                        </div>
+                        <mat-chip-list>
+                            <mat-chip (click)="filterSubcategory(product.id_subcategoria)" class="chip-style ml-4">
+                                {{categoriesList[product.id_subcategoria]}}
+                            </mat-chip>
+                        </mat-chip-list>
+                        <div>
+                            <button mat-raised-button class="mt-4 button-color" (click)="addToCart()">Agregar al
+                                carrito</button>
+                        </div>
+                    </div>
+                </mat-card>
+            </div>
+        </div>
+    </div>
+
+    <button class="float-button" mat-fab>
+        <mat-icon [matBadge]="productsQuantity" [matBadgeColor]="'warn'">shopping_cart</mat-icon>
+    </button>
+
+    <mat-drawer #drawer class="custom-sidenav" [position]="'end'" mode="over">
+        <div class="d-flex justify-content-end m-5">
+            <mat-icon class="menu-text" (click)="drawer.toggle()">close</mat-icon>
+        </div>
+        <div class="d-flex flex-column mt-4">
+            <h1 class="text-center sidebar-title">Subcategorías</h1>
+            <button mat-button *ngFor="let subcategory of subcategories" class="sidebar-button"
+                (click)="filterSubcategory(subcategory.id); drawer.toggle()">{{subcategory.nombre}}</button>
+
+        </div>
+
+    </mat-drawer>
+</mat-drawer-container>
