--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
 @import '~@angular/material/theming';
+@include mat-core();
 $custom-typography: mat-typography-config(
   $font-family: 'Barlow'
 );
-
+$my-app-primary: mat-palette($mat-blue-grey);
+$my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
+$my-app-warn:    mat-palette($mat-deep-orange);
+$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
+@include angular-material-theme($my-app-theme);
 @include angular-material-typography($custom-typography);
 
 html, body { 
