--- a/src/app/ui/products-list/products-list.component.html
+++ b/src/app/ui/products-list/products-list.component.html
@@ -28,18 +28,17 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <mat-card class="d-flex align-items-center p-0 custom-card"
-                    *ngFor="let product of filteredList">
+                <mat-card class="d-flex align-items-center p-0 custom-card" *ngFor="let product of filteredList">
                     <div>
                         <img mat-card-image class="p-5"
                             src="https://compragamer.net/pga/imagenes_publicadas/compragamer_Imganen_general_{{product.imagenes[0].nombre}}-med.jpg">
                     </div>
-                    <div class="d-flex flex-column p-3">
+                    <div class="d-flex flex-column p-3 w-100">
                         <mat-card-title class="custom-card-title">{{product.nombre}}</mat-card-title>
 
                         <div class="d-flex align-items-center mb-2">
                             <p class="price">
-                                {{product.precio | currency:'ARS':'symbol-narrow'}}
+                                {{product.precio | currency:'ARS':'symbol-narrow': '1.0'}}
                             </p>
                         </div>
                         <mat-chip-list>
@@ -70,7 +69,6 @@
 
             <button mat-button *ngFor="let subcategory of subcategories" class="sidebar-button"
                 (click)="filterSubcategory(subcategory.id); drawer.toggle()">{{subcategory.nombre}}</button>
-
         </div>
 
     </mat-drawer>
