--- a/src/app/ui/products-list/products-list.component.html
+++ b/src/app/ui/products-list/products-list.component.html
@@ -27,7 +27,7 @@
             </mat-chip-list>
         </div>
         <div class="row">
-            <div class="col-12" *ngIf="filteredList.length > 0">
+            <div class="col-12" *ngIf="filteredList && filteredList.length > 0">
                 <mat-card class="d-flex align-items-center p-0 custom-card" *ngFor="let product of filteredList">
                     <div>
                         <img mat-card-image class="p-5"
@@ -54,7 +54,7 @@
                 </mat-card>
                 
             </div>
-            <div class="container d-flex justify-content-center align-items-center flex-column mt-4" *ngIf="filteredList.length < 1">
+            <div class="container d-flex justify-content-center align-items-center flex-column mt-4" *ngIf="filteredList && filteredList.length < 1">
                 <img src="../../../assets/img/Search Engine_Two Color.svg" alt="No se encontraron productos">
                 <h1 class="text-center mt-2">No se encontraron productos para {{categoriesList[subcategory!] | lowercase}}</h1>
             </div>
